# crosswords

./: Cargo.toml  test.txt  test2.txt  test_4k.txt  test_64k.txt  words.txt
benches/: solvers.rs
src/: hashmap.rs  lib.rs  main.rs  naive.rs  needle.rs  size.rs  trie.rs  utils.rs
src/solvers/: hashmap.rs  mod.rs  naive.rs  needle.rs  trie.rs
tests/: solvers.rs
