[package]
name = "crosswords"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "solvers"
harness = false

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.94"
clap = { version = "4.5.22", features = ["derive"] }
fxhash = "0.2.1"
memchr = "2.7.4"
rand = "0.8.5"
smallvec = { version = "1.13.2", features = ["const_generics"] }
